rtpbin: "new-jitterbuffer" signal crashes with python when emitted
I am trying to configure some jitterbuffer properties by using the rtspsrc "new-manager" signal, then by connecting the "new-jitterbuffer" signal of the rtpbin.
$ python rtsp.py
Got jitterbuffer
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_bin_add: assertion 'GST_IS_ELEMENT (element)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_element_link_pads_full: assertion 'GST_IS_ELEMENT (src)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_element_set_state: assertion 'GST_IS_ELEMENT (element)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_element_get_static_pad: assertion 'GST_IS_ELEMENT (element)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_pad_link_full: assertion 'GST_IS_PAD (sinkpad)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_object_unref: assertion 'object != NULL' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_element_get_request_pad: assertion 'GST_IS_ELEMENT (element)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_pad_link_full: assertion 'GST_IS_PAD (sinkpad)' failed
(python:10735): GStreamer-CRITICAL **: 18:18:48.580: gst_object_unref: assertion 'object != NULL' failed
sys:1: Warning: instance with invalid (NULL) class pointer
sys:1: Warning: g_signal_connect_data: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed
Edited by Tim-Philipp Müller